buildscript {

    repositories {
        mavenLocal()
        mavenCentral()
        maven { url "https://plugins.gradle.org/m2/" }
        maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
        google()
    }
}

allprojects {

    version = '1.0'

    repositories {
        mavenLocal()
        mavenCentral()
        google()
    }

}

apply plugin: "java-library"
apply plugin: "java"

sourceCompatibility = 15
[compileJava, compileTestJava]*.options*.encoding = 'UTF-8'

sourceSets.main.java.srcDirs = [ "src/main/java" ]
sourceSets.main.resources.srcDirs = [ "src/main/resources/" ]
sourceSets.test.java.srcDirs = [ "src/test/java" ]

test {
    useJUnitPlatform()

    minHeapSize = "1024m" // initial heap size
    maxHeapSize = "2048m" // maximum heap size
    jvmArgs '-XX:MaxPermSize=256m' // mem argument for the test JVM
}

dependencies {
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.0'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.0'
}
